Fix whitespace

--- a/stylesheets/element.css
+++ b/stylesheets/element.css
@@ -28,7 +28,14 @@ h1,
 h2,
 h3,
 h4 {
+  margin-top: 1em;
+  margin-bottom: 1em;
   line-height: 1.25;
+}
+
+p {
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 a {
@@ -44,7 +51,7 @@ img {
 }
 
 ul {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-top: 1em;
+  margin-bottom: 1em;
   padding-left: 1.2em;
 }
