--- a/stylesheets/modules/global-nav.css
+++ b/stylesheets/modules/global-nav.css
@@ -7,6 +7,8 @@
 .gnav__list {
   overflow: hidden;
   display: inline-block;
+  margin-top: 0;
+  margin-bottom: 0;
   margin-right: -1em;
   padding-left: 0;
   vertical-align: middle;
