--- a/stylesheets/modules/showcase.css
+++ b/stylesheets/modules/showcase.css
@@ -22,6 +22,7 @@
 }
 
 .showcase__pack__list {
+  margin-top: 0;
   padding-left: 0;
   list-style: none;
 }
